--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@clerk/clerk-expo": "^2.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/config": "^1.116.14",
+    "@tamagui/core": "^1.116.14",
+    "@tamagui/font-inter": "^1.116.14",
+    "@tamagui/metro-plugin": "^1.116.14",
+    "@tamagui/shorthands": "^1.116.14",
+    "@tamagui/themes": "^1.116.14",
     "convex": "^1.17.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -36,13 +42,16 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "tamagui": "^1.116.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tamagui/babel-plugin": "^1.116.14",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
