--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.14"
+    "tamagui": "^1.116.14",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
