--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tamagui/shorthands": "^1.116.14",
     "@tamagui/themes": "^1.116.14",
     "convex": "^1.17.0",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -43,9 +44,9 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.14",
-    "react-native-svg": "15.8.0"
+    "tamagui": "^1.116.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
