added landing page

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.14"
+    "tamagui": "^1.116.14",
+    "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
