--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
+    "expo-image-manipulator": "^13.0.5",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.5",
     "expo-secure-store": "~14.0.0",
@@ -46,8 +49,7 @@
     "react-native-screens": "~4.0.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.14",
-    "expo-linear-gradient": "~14.0.1"
+    "tamagui": "^1.116.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
