--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@clerk/clerk-expo": "^2.3.0",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.116.14",
     "@tamagui/core": "^1.116.14",
@@ -49,7 +51,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.14"
+    "tamagui": "^1.116.14",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
