--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
+    "expo-document-picker": "~13.0.1",
     "expo-font": "~13.0.1",
     "expo-image-manipulator": "^13.0.5",
     "expo-image-picker": "~16.0.2",
@@ -42,6 +43,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "openai": "^4.73.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
@@ -59,6 +61,7 @@
     "@babel/core": "^7.20.0",
     "@tamagui/babel-plugin": "^1.116.14",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.10.0",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
