--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.3.0",
+    "@clerk/clerk-expo": "^2.3.11",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@howljs/calendar-kit": "^2.2.1",
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.116.14",
-    "@tamagui/core": "^1.116.14",
-    "@tamagui/font-inter": "^1.116.14",
+    "@tamagui/core": "^1.117.2",
+    "@tamagui/linear-gradient": "^1.117.1",
+    "@tamagui/lucide-icons": "^1.117.1",
     "@tamagui/metro-plugin": "^1.116.14",
-    "@tamagui/shorthands": "^1.116.14",
-    "@tamagui/themes": "^1.116.14",
+    "@tamagui/switch": "^1.117.2",
     "convex": "^1.17.0",
     "date-fns": "^4.1.0",
     "expo": "^52.0.7",
@@ -45,13 +47,17 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-calendar-timetable": "^1.0.7",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-svg": "15.8.0",
+    "react-native-timetable": "^1.0.6",
     "react-native-web": "~0.19.10",
-    "tamagui": "^1.116.14",
+    "tamagui": "^1.117.2",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
