--- a/app.json
+++ b/app.json
@@ -15,13 +15,17 @@
       }
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.alexyue.LockedIn"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/LockedInLogo1024x1024.webp",
         "backgroundColor": "#F7F4F1"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +40,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "65bbf7a4-f079-48cc-8c0d-162ba4e56264"
+      }
     }
   }
 }
