--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-timetable": "^1.0.6",
     "react-native-web": "~0.19.10",
     "tamagui": "^1.117.2",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-dev-client": "~5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
