--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.0",
     "@tamagui/config": "^1.116.14",
     "@tamagui/core": "^1.117.2",
     "@tamagui/linear-gradient": "^1.117.1",
@@ -31,7 +31,7 @@
     "@tamagui/switch": "^1.117.2",
     "convex": "^1.17.0",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.7",
+    "expo": "~52.0.17",
     "expo-constants": "~17.0.3",
     "expo-document-picker": "~13.0.1",
     "expo-font": "~13.0.1",
@@ -39,16 +39,16 @@
     "expo-image-picker": "~16.0.2",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.5",
+    "expo-router": "~4.0.11",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.10",
+    "expo-splash-screen": "~0.29.16",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
+    "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "openai": "^4.73.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendar-timetable": "^1.0.7",
     "react-native-dropdown-picker": "^5.4.6",
@@ -56,13 +56,16 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-timetable": "^1.0.6",
     "react-native-web": "~0.19.10",
     "tamagui": "^1.117.2",
     "zustand": "^5.0.1",
-    "expo-dev-client": "~5.0.5"
+    "expo-dev-client": "~5.0.5",
+    "metro": "0.81.0",
+    "metro-resolver": "0.81.0",
+    "metro-config": "0.81.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
