--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Locked-In-App",
+    "name": "LockedIn",
     "slug": "Locked-In-App",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -26,7 +26,8 @@
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.RECORD_AUDIO"
-      ]
+      ],
+      "package": "com.alexyue.LockedIn"
     },
     "web": {
       "bundler": "metro",
